# datantic

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix
src/: main.py
src/datantic/: __init__.py  converters.py  fields.py  model.py  nesting.py  types.py  utils.py  validator.py
src/datantic/plugins/: __init__.py  pandas.py  polars.py
src/datantic/validators/: pandas.py  polars.py
src/tests/: conftest.py  test_converters.py  test_fields.py  test_model.py  test_nesting.py  test_plugins_pandas.py  test_plugins_polars.py  test_types.py  test_utils.py  test_validator.py  test_validators_pandas.py  test_validators_polars.py
